双向绑定实现调色板

--- a/02_双向绑定实现调色板/project.config.json
+++ b/02_双向绑定实现调色板/project.config.json
@@ -18,7 +18,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.11.0",
 	"appid": "wx4f35b7c886a891eb",
-	"projectname": "applet-of-WeChat",
+	"projectname": "wechat",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
