首页的制作

--- a/19_ceshi1/app.json
+++ b/19_ceshi1/app.json
@@ -1,23 +1,22 @@
 {
     "pages": [
-        "pages/index/index",
         "pages/search_result/search_result",
+        "pages/index/index",
+        "pages/soso/soso",
         "pages/category/category",
         "pages/cart/cart",
         "pages/me/me",
-        "pages/test2/test2",
-        "pages/soso/soso"
-        
+        "pages/test2/test2"
+
     ],
     "window": {
-        
-        "navigationStyle":"custom"
+
+        "navigationStyle": "custom"
     },
     "sitemapLocation": "sitemap.json",
     "tabBar": {
         "selectedColor": "#f38",
-        "list": [
-            {
+        "list": [{
                 "pagePath": "pages/index/index",
                 "text": "首页",
                 "iconPath": "/images/i1a.png",
