二手车细节页

--- a/19_ceshi1/app.json
+++ b/19_ceshi1/app.json
@@ -1,5 +1,6 @@
 {
     "pages": [
+        "pages/cardetail/cardetail",
         "pages/search_result/search_result",
         "pages/index/index",
         "pages/soso/soso",
