--- a/19_ceshi2/app.json
+++ b/19_ceshi2/app.json
@@ -1,22 +1,22 @@
 {
     "pages": [
         "pages/index/index",
+        "pages/cardetail/cardetail",
         "pages/search_result/search_result",
         "pages/category/category",
         "pages/cart/cart",
         "pages/me/me",
         "pages/test2/test2",
         "pages/soso/soso"
-        
+
     ],
     "window": {
-        "navigationStyle":"custom"
+        "navigationStyle": "custom"
     },
     "sitemapLocation": "sitemap.json",
     "tabBar": {
         "selectedColor": "#f38",
-        "list": [
-            {
+        "list": [{
                 "pagePath": "pages/index/index",
                 "text": "首页",
                 "iconPath": "/images/i1a.png",
