--- a/19_server1/package.json
+++ b/19_server1/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
+    "iconv-lite": "^0.5.1",
     "mockjs": "^1.1.0"
   }
 }
