--- a/30_/project.config.json
+++ b/30_/project.config.json
@@ -37,7 +37,7 @@
     "compileType": "miniprogram",
     "libVersion": "2.0.4",
     "appid": "wx4f35b7c886a891eb",
-    "projectname": "restudy",
+    "projectname": "30_",
     "debugOptions": {
         "hidedInDevtools": []
     },
